# disney-customers-feedback

./: .gitignore  GRAFANA_DASHBOARD_GUIDE.md  METRICS_REFERENCE.md  MONITORING.md  MONITORING_IMPLEMENTATION.md  MONITORING_SETUP_SUMMARY.md  QUALITY_AND_SCALE.txt  QUICK_START.md  README.md  REDIS_CACHE_GUIDE.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  pyproject.toml  test_cache_integration.sh  test_e2e_monitoring.sh  test_monitoring.sh  test_redis_cache.py
grafana/dashboards/: disney-feedback-dashboard.json
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasources/: datasources.yaml
src/disney_customers_feedback_ex/: main.py
src/disney_customers_feedback_ex/core/: circuit_breaker.py  lifespan.py  logging.py  metrics.py  telemetry.py
src/disney_customers_feedback_ex/resources/: assignment.txt  memory_bank.md
src/disney_customers_feedback_ex/services/: __init__.py  cache_service.py  embedding_service.py  llm_service.py  review_service.py  vector_store.py
tests/: README.md  test_integration.py
