[project]
name = "disney-customers-feedback-ex"
version = "0.1.0"
description = ""
authors = [
    {name = "“dani-shemesh-lendbuzz”",email = "dani.shemesh@lendbuzz.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.3,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "openai (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "disney_customers_feedback_ex", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v"]
