[project]
name = "disney-customers-feedback-ex"
version = "0.1.0"
description = ""
authors = [
    {name = "“dani-shemesh-lendbuzz”",email = "dani.shemesh@lendbuzz.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.3,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "openai (>=2.6.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "chromadb (>=1.3.0,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "opentelemetry-api (>=1.38.0,<2.0.0)",
    "opentelemetry-sdk (>=1.38.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.59b0,<0.60)",
    "opentelemetry-exporter-otlp (>=1.38.0,<2.0.0)",
    "opentelemetry-instrumentation-httpx (>=0.59b0,<0.60)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "redis (>=5.0.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "disney_customers_feedback_ex", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v"]
